--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         </header>
         <main role="main">
             <section>
+                <img src="" alt="" class="intro-img">
                 <article class="content-wrap">
                     <h2></h2>
                 </article>
